<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/evilation_black"
                tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/login_twitter_button"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo_login"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/login_twitter_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/login_facebook_button"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/icn_login_twitter_normal"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/twitter_button"
        android:background="@drawable/btn_twitter_background"
        />
    <Button
        android:id="@+id/login_facebook_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/login_separator"
        android:drawableStart="@drawable/icn_login_facebook_normal"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/facebook_button"
        android:background="@drawable/btn_facebook_background"
        />
    <RelativeLayout
        android:id="@+id/login_separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_box_title"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/evilation_login_foreground_white"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@color/evilation_black"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/evilation_login_foreground_white"
            android:text="@string/separator"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/login_box_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/username_password_header"
        android:layout_above="@+id/login_email_field"
        android:textColor="@color/evilation_login_foreground_white"
        />
    <EditText
        android:id="@+id/login_email_field"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableStart="@drawable/icn_mail"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:layout_above="@+id/login_password_field"
        android:background="@color/evilation_login_box_white"
        android:layout_marginBottom="1dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_placeholder"
        />
    <EditText
        android:id="@+id/login_password_field"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/icn_lock"
        android:drawablePadding="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:layout_above="@+id/login_action_button"
        android:background="@color/evilation_login_box_white"
        android:layout_marginBottom="20dp"
        android:hint="@string/password_placeholder"
        />
    <Button
        android:id="@+id/login_action_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_login"
        android:textColor="@color/evilation_black"
        android:background="@drawable/btn_login_background"
        />
</RelativeLayout>
